<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_clima_saude_logo"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/navigation_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/title_weather" />

        <item
            android:id="@+id/navigation_health"
            android:icon="@drawable/ic_health"
            android:title="@string/title_health" />

        <item
            android:id="@+id/navigation_reports"
            android:icon="@drawable/ic_chart"
            android:title="@string/title_reports" />

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/title_profile" />
    </group>

    <divider />

    <item android:title="Suporte">
        <menu>
            <item
                android:id="@+id/navigation_emergency_contacts"
                android:icon="@drawable/ic_emergency"
                android:title="@string/title_emergency_contacts" />

            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_person"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>