<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Botão de Emergência movido para o início para acesso imediato. -->
    <item
        android:id="@+id/navigation_emergency_call"
        android:icon="@drawable/ic_emergency"
        android:title="@string/emergency" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_action"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_health"
        android:title="@string/title_health" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_chart"
        android:title="@string/title_reports" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />
</menu>
